// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeContainer component must render properly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Connect(HomeContainer)
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "event": Object {
        "date": "Test date",
        "description": "Test description",
        "location": Object {
          "address": "test address",
          "name": "test name",
          "postCode": "test post code",
        },
        "logo": "Test logo",
        "pastEvents": Array [
          Object {
            "id": 0,
            "name": "Test event",
            "path": "http://test.url.com/",
          },
        ],
        "talks": Array [
          Object {
            "description": "Test talk 1",
            "id": 0,
          },
          Object {
            "description": "Test talk 2",
            "id": 1,
          },
        ],
        "title": "Test title",
      },
      "getEventDetails": [Function],
      "getOrganizationDetails": [Function],
      "getPastEvents": [Function],
      "getSpeakers": [Function],
      "organization": Object {
        "logo": "logo path",
        "social": Array [
          Object {
            "id": 1,
            "name": "test social",
            "path": "/testSocial",
          },
        ],
      },
      "speakers": Array [
        Object {
          "bwPhoto": "https://avatars3.githubusercontent.com/u/1074?s=460&v=4",
          "company": "Freelancer",
          "id": 0,
          "jobTitle": "Web Dev Consultant",
          "name": "André Gonçalves",
          "personalWebsite": "https://github.com/andregoncalves",
          "photo": "https://avatars3.githubusercontent.com/u/1074?s=460&v=4",
        },
        Object {
          "bwPhoto": "https://avatars3.githubusercontent.com/u/2837728?s=460&v=4",
          "company": "Blip",
          "id": 1,
          "jobTitle": "Front End Developer",
          "jobWebsite": "https://blip.pt/",
          "name": "Aurélio Pita",
          "personalWebsite": "https://github.com/jaapaurelio",
          "photo": "https://avatars3.githubusercontent.com/u/2837728?s=460&v=4",
        },
      ],
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "storeSubscription": Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      },
      "talks": Array [],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "event": Object {
          "date": "Test date",
          "description": "Test description",
          "location": Object {
            "address": "test address",
            "name": "test name",
            "postCode": "test post code",
          },
          "logo": "Test logo",
          "pastEvents": Array [
            Object {
              "id": 0,
              "name": "Test event",
              "path": "http://test.url.com/",
            },
          ],
          "talks": Array [
            Object {
              "description": "Test talk 1",
              "id": 0,
            },
            Object {
              "description": "Test talk 2",
              "id": 1,
            },
          ],
          "title": "Test title",
        },
        "getEventDetails": [Function],
        "getOrganizationDetails": [Function],
        "getPastEvents": [Function],
        "getSpeakers": [Function],
        "organization": Object {
          "logo": "logo path",
          "social": Array [
            Object {
              "id": 1,
              "name": "test social",
              "path": "/testSocial",
            },
          ],
        },
        "speakers": Array [
          Object {
            "bwPhoto": "https://avatars3.githubusercontent.com/u/1074?s=460&v=4",
            "company": "Freelancer",
            "id": 0,
            "jobTitle": "Web Dev Consultant",
            "name": "André Gonçalves",
            "personalWebsite": "https://github.com/andregoncalves",
            "photo": "https://avatars3.githubusercontent.com/u/1074?s=460&v=4",
          },
          Object {
            "bwPhoto": "https://avatars3.githubusercontent.com/u/2837728?s=460&v=4",
            "company": "Blip",
            "id": 1,
            "jobTitle": "Front End Developer",
            "jobWebsite": "https://blip.pt/",
            "name": "Aurélio Pita",
            "personalWebsite": "https://github.com/jaapaurelio",
            "photo": "https://avatars3.githubusercontent.com/u/2837728?s=460&v=4",
          },
        ],
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "storeSubscription": Subscription {
          "listeners": Object {
            "clear": [Function],
            "get": [Function],
            "notify": [Function],
            "subscribe": [Function],
          },
          "onStateChange": [Function],
          "parentSub": undefined,
          "store": Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          },
          "unsubscribe": [Function],
        },
        "talks": Array [],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HomeContainer component must render properly with date 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Connect(HomeContainer)
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "event": Object {
        "date": "<Aug.10 />",
        "description": "Test description",
        "location": Object {
          "address": "test address",
          "name": "test name",
          "postCode": "test post code",
        },
        "logo": "Test logo",
        "pastEvents": Array [
          Object {
            "id": 0,
            "name": "Test event",
            "path": "http://test.url.com/",
          },
        ],
        "talks": Array [
          Object {
            "description": "Test talk 1",
            "id": 0,
          },
          Object {
            "description": "Test talk 2",
            "id": 1,
          },
        ],
        "title": "Test title",
      },
      "getEventDetails": [Function],
      "getOrganizationDetails": [Function],
      "getPastEvents": [Function],
      "getSpeakers": [Function],
      "organization": Object {
        "logo": "logo path",
        "social": Array [
          Object {
            "id": 1,
            "name": "test social",
            "path": "/testSocial",
          },
        ],
      },
      "speakers": Array [
        Object {
          "bwPhoto": "https://avatars3.githubusercontent.com/u/1074?s=460&v=4",
          "company": "Freelancer",
          "id": 0,
          "jobTitle": "Web Dev Consultant",
          "name": "André Gonçalves",
          "personalWebsite": "https://github.com/andregoncalves",
          "photo": "https://avatars3.githubusercontent.com/u/1074?s=460&v=4",
        },
        Object {
          "bwPhoto": "https://avatars3.githubusercontent.com/u/2837728?s=460&v=4",
          "company": "Blip",
          "id": 1,
          "jobTitle": "Front End Developer",
          "jobWebsite": "https://blip.pt/",
          "name": "Aurélio Pita",
          "personalWebsite": "https://github.com/jaapaurelio",
          "photo": "https://avatars3.githubusercontent.com/u/2837728?s=460&v=4",
        },
      ],
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "storeSubscription": Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      },
      "talks": Array [],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "event": Object {
          "date": "<Aug.10 />",
          "description": "Test description",
          "location": Object {
            "address": "test address",
            "name": "test name",
            "postCode": "test post code",
          },
          "logo": "Test logo",
          "pastEvents": Array [
            Object {
              "id": 0,
              "name": "Test event",
              "path": "http://test.url.com/",
            },
          ],
          "talks": Array [
            Object {
              "description": "Test talk 1",
              "id": 0,
            },
            Object {
              "description": "Test talk 2",
              "id": 1,
            },
          ],
          "title": "Test title",
        },
        "getEventDetails": [Function],
        "getOrganizationDetails": [Function],
        "getPastEvents": [Function],
        "getSpeakers": [Function],
        "organization": Object {
          "logo": "logo path",
          "social": Array [
            Object {
              "id": 1,
              "name": "test social",
              "path": "/testSocial",
            },
          ],
        },
        "speakers": Array [
          Object {
            "bwPhoto": "https://avatars3.githubusercontent.com/u/1074?s=460&v=4",
            "company": "Freelancer",
            "id": 0,
            "jobTitle": "Web Dev Consultant",
            "name": "André Gonçalves",
            "personalWebsite": "https://github.com/andregoncalves",
            "photo": "https://avatars3.githubusercontent.com/u/1074?s=460&v=4",
          },
          Object {
            "bwPhoto": "https://avatars3.githubusercontent.com/u/2837728?s=460&v=4",
            "company": "Blip",
            "id": 1,
            "jobTitle": "Front End Developer",
            "jobWebsite": "https://blip.pt/",
            "name": "Aurélio Pita",
            "personalWebsite": "https://github.com/jaapaurelio",
            "photo": "https://avatars3.githubusercontent.com/u/2837728?s=460&v=4",
          },
        ],
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "storeSubscription": Subscription {
          "listeners": Object {
            "clear": [Function],
            "get": [Function],
            "notify": [Function],
            "subscribe": [Function],
          },
          "onStateChange": [Function],
          "parentSub": undefined,
          "store": Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          },
          "unsubscribe": [Function],
        },
        "talks": Array [],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
